--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,51 @@
-# Compiled class file
+# Gradle
+.gradle/
+build/
+out/
+!gradle/wrapper/gradle-wrapper.jar
+
+# IntelliJ IDEA
+.idea/
+*.iml
+*.iws
+
+# VS Code
+.vscode/
+
+# Java
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
+*.log
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Spring Boot specific
+target/
+logs/
 hs_err_pid*
-replay_pid*
+
+# Temporary files
+*.tmp
+*.swp
+*.swo
+*.bak
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Application properties (Sensitive)
+#application.yml
+#application.properties
+.env
+
+# Docker
+docker-compose.override.yml
+*.log
+*.pid
+
+# Kubernetes
+deployment/k8s/*.yml
+
+# Test reports
+test-results/
